# edgetx-sdcard-sounds

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  README.txt  Sound files.docx  build-checks.py  build-checks.sh  compatibility sounds 220115.docx  generate-elevenlabs.py  generate.py  generate.sh  pyproject.toml  release.py  release.sh  sounds.json  system sounds.docx  voice-gen-azure.py  voice-gen-elevenlabs.py  voice-gen-glados.py  voice-gen.py  voice-gen.sh  voice_generation_config.py
.devcontainer/: devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: add_phrases.md  new_language_or_locale.md  new_voice_for_existing_language_or_locale.md  wrong_pronunciation.md  wrong_translation.md
.github/workflows/: build_checks.yml  build_release.yml  generate_voices.yml
SOUNDS/en_us-joshua-bardwell/: README.txt
tools/: fix_csv_quotes.py
voices/: .~lock.pl-PL.csv#  cs-CZ.csv  da_DK.csv  da_DK.csv.bak  da_DK_scripts.csv  da_DK_scripts.csv.bak  de-DE-taranis.csv  de-DE.csv  en-GB-Libby.csv  en-GB-Ryan.csv  en-GB.csv  en-GB_scripts.csv  en-IE-Emily.csv  en-US-Guy.csv  en-US-Sara.csv  en-US-taranis.csv  en-US.csv  en-US_scripts.csv  es-CL-Catalina.csv  es-CL.csv  es-ES-taranis.csv  es-ES.csv  es-ES_scripts.csv  fr-FR.csv  it-IT-taranis.csv  it-IT.csv  it-IT_scripts.csv  ja-JP.csv  ja-JP_scripts.csv  ko-KR.csv  ko-KR_scripts.csv  pl-PL.csv  pt-PT-taranis.csv  pt-PT.csv  ru-RU.csv  sv-SE.csv  sv-SE_scripts.csv  uk-UA.csv  zh-CN.csv  zh-HK.csv  (+1 more)
